--- a/src/template/pulumi/Dockerfile.j2
+++ b/src/template/pulumi/Dockerfile.j2
@@ -35,6 +35,7 @@ RUN apt-get update && apt-get install --yes \
         ca-certificates \
         curl \
         gnupg \
+        unzip \
     && curl -sLf --retry 3 --tlsv1.2 --proto "=https" 'https://packages.doppler.com/public/cli/gpg.DE2A7741A397C129.key' | apt-key add - \
     && echo "deb https://packages.doppler.com/public/cli/deb/debian any-version main" | tee /etc/apt/sources.list.d/doppler-cli.list \
     && apt-get update && apt-get install doppler \
@@ -60,7 +61,7 @@ RUN apt-get update && apt-get install --yes \
 
 WORKDIR /usr/src/app
 {% if language == "go" %}
-COPY --from=build /usr/src/app/altf4llc-pulumi-vpn /usr/local/bin/altf4llc-pulumi-vpn
+COPY --from=build /usr/src/app/{{ product }}-{{ name }} /usr/local/bin/{{ product }}-{{ name }}
 {%- elif language == "typescript" %}
 COPY {% if dependencies.private %}.npmrc {% endif %}package.json yarn.lock ./
 
@@ -74,5 +75,4 @@ COPY justfile justfile
 COPY Pulumi.yaml Pulumi.yaml
 {% for command in dockerfile.build_post_install -%}
 {{ command | safe }}
-{% endfor %}
-ENTRYPOINT ["pulumi"]
+{% endfor -%}
