--- a/src/template/pulumi/Dockerfile.j2
+++ b/src/template/pulumi/Dockerfile.j2
@@ -10,12 +10,12 @@ WORKDIR /usr/src/app
 
 COPY go.mod go.sum ./
 
-RUN go mod download
+RUN go mod download -x
 
 COPY cmd/ cmd/
 COPY internal/ internal/
 
-RUN go build ./cmd/...
+RUN go build -v ./cmd/...
 {%- endif %}
 
 {% if language == "go" %}
