fix(pulumi): set proper name for Docker based jobs

--- a/src/template/pulumi/.circleci/config.yml.j2
+++ b/src/template/pulumi/.circleci/config.yml.j2
@@ -137,7 +137,7 @@ jobs:
           when: always
 {%- else %}
       - run:
-          name: << parameters.command >> << parameters.stack >>
+          name: Run << parameters.command >> << parameters.stack >>
           command: |
             just << parameters.command >> << parameters.stack >>
 {%- endif %}
