--- a/src/template/pulumi/.gitignore.j2
+++ b/src/template/pulumi/.gitignore.j2
@@ -4,7 +4,7 @@
 # DO NOT UPDATE: This file is managed by "build-configs"
 
 /bin/
-{% if pulumi.eks_cluster != "" -%}
+{%- if pulumi.eks_cluster != "" -%}
 .kube/
 {%- endif %}
 {% if language == "typescript" -%}
