--- a/src/template/pulumi/Pulumi.yaml.j2
+++ b/src/template/pulumi/Pulumi.yaml.j2
@@ -3,7 +3,7 @@
 #░▀░▀░▀▀▀░░▀░░▀▀▀░░░░░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░▀░░▀░░▀▀▀░▀▀░
 # DO NOT UPDATE: This file is managed by "build-configs"
 
-name: "{{ name }}"
+name: "{% if product != 'altf4llc' %}{{ product }}-{% endif %}{{ name }}"
 runtime:
 {%- if language == "go" %}
   name: "go"
