--- a/src/template/pulumi/typescript/Dockerfile.j2
+++ b/src/template/pulumi/typescript/Dockerfile.j2
@@ -3,27 +3,8 @@
 #░▀░▀░▀▀▀░░▀░░▀▀▀░░░░░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░▀░░▀░░▀▀▀░▀▀░
 # DO NOT UPDATE: This file is managed by "build-configs"
 
-{% if language == "go" -%}
-FROM public.ecr.aws/docker/library/golang:1.20 as build
-
-WORKDIR /usr/src/app
-
-COPY go.mod go.sum ./
-
-RUN go mod download -x
-
-COPY cmd/ cmd/
-COPY internal/ internal/
-
-RUN go build -v ./cmd/...
-{%- endif %}
-
-{% if language == "go" %}
-FROM public.ecr.aws/docker/library/golang:1.20
-{% elif language == "typescript" %}
 FROM public.ecr.aws/docker/library/node:18
-{% endif %}
-{% if language == "typescript" and dependencies.private -%}
+{% if dependencies.private -%}
 ARG NPM_TOKEN
 ENV NPM_TOKEN ${NPM_TOKEN}
 {%- endif -%}
@@ -60,9 +41,7 @@ RUN apt-get update && apt-get install --yes \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /usr/src/app
-{% if language == "go" %}
-COPY --from=build /usr/src/app/{{ product }}-{{ name }} /usr/local/bin/{{ product }}-{{ name }}
-{%- elif language == "typescript" %}
+
 COPY {% if dependencies.private %}.npmrc {% endif %}package.json yarn.lock ./
 
 RUN yarn install --frozen-lockfile
@@ -70,7 +49,6 @@ RUN yarn install --frozen-lockfile
 COPY resource/ resource/
 COPY index.ts index.ts
 COPY tsconfig.json tsconfig.json
-{% endif %}
 COPY justfile justfile
 COPY Pulumi.yaml Pulumi.yaml
 {% for command in dockerfile.build_post_install -%}
