--- a/src/template/pulumi/typescript/justfile.j2
+++ b/src/template/pulumi/typescript/justfile.j2
@@ -5,29 +5,19 @@
 
 set shell := ["bash", "-c"]
 
-build sha{% if language == "typescript" and dependencies.private %} $NPM_TOKEN=`doppler secrets get --plain --config "circleci" --project "{{ product }}-{{ name }}" NPM_TOKEN`{% endif %}:
-{%- if language == "go" %}
+build sha{% if dependencies.private %} $NPM_TOKEN=`doppler secrets get --plain --config "circleci" --project "{{ product }}-{{ name }}" NPM_TOKEN`{% endif %}:
   docker buildx build \
-    --progress "plain" \
-    --tag "{{ dockerfile.registry }}/{{ product }}-{{ name }}:{% raw %}{{sha}}{% endraw %}-build" \
-    --target "build" \
-    .
-{%- endif %}
-  docker buildx build \
-{%- if language == "go" %}
-    --cache-from "{{ dockerfile.registry }}/{{ product }}-{{ name }}:{% raw %}{{sha}}{% endraw %}-build" \
-{%- endif %}
-{%- if language == "typescript" and dependencies.private %}
+{%- if dependencies.private %}
     --build-arg NPM_TOKEN \
 {%- endif %}
     --progress "plain" \
     --tag "{{ dockerfile.registry }}/{{ product }}-{{ name }}:{% raw %}{{sha}}{% endraw %}" \
     .
-{% if language == "typescript" %}
+
 install:
   rm -rf node_modules
   yarn install
-{% endif %}
+
 login:
     aws ecr get-login-password \
       --region "us-west-2" | docker login \
