Added support for Go services with Nix (#5)
* feat(service): added support for go services with Nix

* refactor(templates): moves rest of templates into language folders

* feat(pulumi): removes all language logic from typescript templates

* feat(pulumi): added support for go templates

* feat(template): remove unneeded if statement

--- a/src/template/pulumi/go/Pulumi.yaml.j2
+++ b/src/template/pulumi/go/Pulumi.yaml.j2
@@ -3,10 +3,8 @@
 #░▀░▀░▀▀▀░░▀░░▀▀▀░░░░░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░▀░░▀░░▀▀▀░▀▀░
 # DO NOT UPDATE: This file is managed by "build-configs"
 
-/bin/
-{%- if pulumi.eks_cluster != "" -%}
-.kube/
-{%- endif %}
-{% if language == "typescript" -%}
-/node_modules/
-{%- endif %}
+name: "{% if product != 'altf4llc' %}{{ product }}-{% endif %}{{ name }}"
+runtime:
+  name: "go"
+  options:
+    binary: "{{ product }}-{{ name }}"
